# FundAlg

./: .gitignore  readme.md
lab1/: CMakeLists.txt  main.c
lab1.1/: CMakeLists.txt
lab1.1/include/: myMath.h
lab1.2/src/: myLib.c
lab1.3/: CMakeLists.txt
lab1.3/include/: functions.h
lab1.3/src/: functions.c  main.c
lab1.5/: build  functions.c  functions.h  main.c  out_test1.txt  test1.txt  test2.txt  test3.txt  test4.txt
lab1.6/: CMakeLists.txt
lab1.6/include/: functions.h
lab1.6/src/: functions.c  main.c
lab1.7/: build  functions.c  functions.h  input.txt  main.c  output.txt
lab1/include/: myMath.h
lab1/src/: myMath.c
lab1/tests/: test.c
lab2/: CMakeLists.txt  main.c
lab2.1/: CMakeLists.txt
lab2.1/include/: functions.h
lab2.1/src/: functions.c  main.c
lab2.2/: CMakeLists.txt
lab2.2/include/: functions.h
lab2.2/src/: functions.c  main.c
lab2.5/: build  functions.c  functions.h  main.c  output.txt  test.txt
lab2.6/: build  functions.c  functions.h  main.c  stud.txt  studout.txt
lab2.6/include/: functions.h
lab2.6/src/: functions.c  main.c
lab2/include/: myLib.h
lab3.1/: CMakeLists.txt
lab3.1/include/: functions.h
lab3.1/src/: functions.c  main.c
